# apps/api/src/olympus/weather/queries/weatherStations.ts
@@ -1,0 +1,5 @@
+export const WEATHER_STATION = `id
+  name
+  macAddress
+  createdTime
+  lastUpdatedTime`;
